--- a/BrandEmbold/css/embold-fonts-pack.css
+++ b/BrandEmbold/css/embold-fonts-pack.css
@@ -1,6 +1,7 @@
 @import url("https://use.typekit.net/boc6hvk.css");
 @import url("https://use.typekit.net/mwl7bmw.css");
 @import url("https://use.typekit.net/gua6lws.css");
+@import url("https://use.typekit.net/rop6ibq.css");
 * {
   box-sizing: border-box;
 }
@@ -32,11 +33,12 @@ h4 {
 }
 .block-candidate {
   display: inline-block;
-  width: 300px;
+  width: 450px;
   margin-right: 15px;
+  margin-bottom: 40px;
   vertical-align: top;
 }
-.block-candidate:last-child {
+.block-candidate:nth-child(even) {
   margin-right: 0;
 }
 .section-candidates {
@@ -45,7 +47,7 @@ h4 {
 .btn-candidate {
   width: 100%;
   height: 200px;
-  padding: 40px 24px 24px 24px;
+  padding: 35px 24px 24px 24px;
   text-align: center;
   border: 1px solid #e3e8ec;
   border-radius: 5px;
@@ -56,10 +58,11 @@ h4 {
 .btn-candidate .title {
   display: block;
   color: #334968;
-  height: 90px;
-  font-size: 35px;
+  height: 98px;
+  font-size: 40px;
   margin-bottom: 8px;
   line-height: 120%;
+  vertical-align: bottom;
 }
 .btn-candidate .description {
   display: block;
@@ -94,6 +97,9 @@ h4 {
 .benton-sans {
   font-family: 'benton-sans', sans-serif;
   font-weight: 500;
+}
+.sofia-pro {
+  font-family: 'Sofia-pro', sans-serif;
 }
 .section {
   padding-bottom: 24px;
