--- a/BrandEmbold/css/embold-pack-benton.css
+++ b/BrandEmbold/css/embold-pack-benton.css
@@ -88,6 +88,12 @@ h5 {
 .fs {
   font-size: 20px;
 }
+.fs .summary {
+  font-size: 14px;
+  padding: 18px;
+  text-align: center;
+  border: 1px solid #efefef;
+}
 .fs .description {
   display: inline-block;
   color: #a3b3c1;
