--- a/BrandEmbold/css/embold-pack-sofia.less
+++ b/BrandEmbold/css/embold-pack-sofia.less
@@ -99,6 +99,13 @@ h5 {
 .fs {
 	font-size: 20px;
 
+	.summary {
+		font-size: 14px;
+		padding: 18px;
+		text-align: center;
+		border: 1px solid #efefef;
+	}
+
 	.description {
 		display: inline-block;
 		color: #a3b3c1;
