--- a/embold.com/css/embold.css
+++ b/embold.com/css/embold.css
@@ -1,6 +1,31 @@
 @import url("https://use.typekit.net/cwa2ewg.css");
+.ic-sm-user-executive {
+  background-image: url('../images/ic-sm-user-executive.svg');
+}
+.ic-door-open {
+  background-image: url('../images/ic-md-door-open.svg');
+}
+.ic-star-glow {
+  background-image: url('../images/ic-md-star-glow.svg');
+}
+.ic-gift-box {
+  background-image: url('../images/ic-md-gift-box.svg');
+}
+/* -- prefix --*/
 .sofia {
   font-family: 'Sofia Pro', sans-serif;
+}
+.background-no-repeat {
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+.text-center {
+  text-align: center;
+}
+.box-shadow {
+  -webkit-box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.14);
+  -moz-box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.14);
+  box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.14);
 }
 * {
   box-sizing: border-box;
@@ -10,7 +35,7 @@ body {
   font-family: 'Acumin Pro', sans-serif;
   font-size: 13px;
   font-weight: normal;
-  line-height: 1.3;
+  line-height: 1.2;
 }
 a {
   color: inherit;
@@ -29,9 +54,6 @@ h4 {
   font-family: 'Sofia Pro', sans-serif;
   margin: 0 0 8px 0;
   text-transform: uppercase;
-}
-.text-center {
-  text-align: center;
 }
 nav {
   padding: 18px 0;
@@ -144,6 +166,14 @@ nav .nav-wrap-items .nav-item-main {
 .block h5 {
   text-align: center;
 }
+.block span.icon-section {
+  display: block;
+  width: 48px;
+  height: 48px;
+  margin: 0 auto;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
 .block .block-description {
   color: #9AA0AD;
   width: 60%;
@@ -151,6 +181,11 @@ nav .nav-wrap-items .nav-item-main {
   font-size: 1rem;
   font-weight: normal;
   text-align: center;
+}
+.block:after {
+  display: block;
+  content: '';
+  clear: both;
 }
 .block-hero {
   height: 480px;
@@ -168,7 +203,7 @@ nav .nav-wrap-items .nav-item-main {
   font-size: 16px;
   text-transform: uppercase;
 }
-.block-footer .footer-menu-link {
+.block-footer .nav-menu-link {
   display: block;
   margin-bottom: 5px;
 }
@@ -246,9 +281,6 @@ nav .nav-wrap-items .nav-item-main {
   top: 0;
   right: 0;
 }
-.block-section-sub {
-  height: 350px;
-}
 .block-section-sub .section-title {
   font-size: 2.5em;
 }
@@ -289,9 +321,6 @@ nav .nav-wrap-items .nav-item-main {
   vertical-align: middle;
   font-family: 'Sofia Pro', sans-serif;
 }
-.tab-role .tab-wrap .tab-item .ic-sm-user-executive {
-  background-image: url('../images/ic-sm-user-executive.svg');
-}
 .tab-role .tab-wrap .active,
 .tab-role .tab-wrap .tab-item:hover {
   color: #fff;
@@ -305,10 +334,15 @@ nav .nav-wrap-items .nav-item-main {
 .block-sub-menu {
   position: relative;
   top: inherit;
+  transition: all 0.5s;
 }
 .block-sub-menu-fix {
   position: fixed;
   top: 120px;
+}
+.block-sub-menu-fix-bottom {
+  position: absolute;
+  bottom: 40px;
 }
 .sub-menu {
   color: #787E8D;
@@ -387,13 +421,40 @@ nav .nav-wrap-items .nav-item-main {
   color: #fff;
   background-color: #2A3141;
 }
+.team-value .wrap-value {
+  width: 100%;
+  margin-bottom: 36px;
+  padding-bottom: 24px;
+  -webkit-box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.14);
+  -moz-box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.14);
+  box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.14);
+}
+.team-value .wrap-value .photo {
+  height: 80px;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+.team-value .wrap-value .title {
+  color: #EF7E53;
+  font-size: 1.3em;
+  text-align: left;
+  padding: 0 24px;
+}
+.team-value .wrap-value .description {
+  padding: 0 24px;
+}
+.team-value .wrap-value-left {
+  margin-top: 36px;
+}
 .bg-product-features {
   background-image: url('../images/header-sub-product-features.svg');
 }
 .bg-user-stories-user-roles {
   background-image: url('../images/header-sub-user-stories-user-roles.svg');
 }
-.background-no-repeat {
-  background-repeat: no-repeat;
-  background-position: center center;
+.bg-company-about {
+  background-image: url('../images/header-sub-company-about.svg');
+}
+.bg-company-careers {
+  background-image: url('../images/header-sub-company-careers.svg');
 }
