--- a/embold.com/css/embold.less
+++ b/embold.com/css/embold.less
@@ -3,8 +3,27 @@
 @import url("https://use.typekit.net/cwa2ewg.css");
 @import url("color-chart.less");
 @import url("form.less");
+@import url("icons.less");
+
+/* -- prefix --*/
+
 .sofia {
   font-family: 'Sofia Pro', sans-serif;
+}
+
+.background-no-repeat {
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.box-shadow {
+  -webkit-box-shadow: 0px 4px 16px 0px rgba(0,0,0,0.14);
+     -moz-box-shadow: 0px 4px 16px 0px rgba(0,0,0,0.14);
+          box-shadow: 0px 4px 16px 0px rgba(0,0,0,0.14);
 }
 
 * {
@@ -16,7 +35,7 @@ body {
   font-family: 'Acumin Pro', sans-serif;
   font-size: 13px;
   font-weight: normal;
-  line-height: 1.3;
+  line-height: 1.2;
 }
 
 a {
@@ -38,10 +57,6 @@ h4 {
   font-family: 'Sofia Pro', sans-serif;
   margin: 0 0 8px 0;
   text-transform: uppercase;
-}
-
-.text-center {
-  text-align: center;
 }
 
 nav {
@@ -188,6 +203,14 @@ nav {
     .text-center;
   }
 
+  span.icon-section {
+    display: block;
+    width: 48px;
+    height: 48px;
+    margin: 0 auto;
+    .background-no-repeat;
+  }
+
   .block-description {
     color: @gray600;
     width: 60%;
@@ -196,6 +219,12 @@ nav {
     font-weight: normal;
     .text-center;
   }
+}
+
+.block:after {
+  display: block;
+  content: '';
+  clear: both;
 }
 
 .block-hero {
@@ -216,7 +245,7 @@ nav {
     text-transform: uppercase;
   }
 
-  .footer-menu-link {
+  .nav-menu-link {
     display: block;
     margin-bottom: 5px;
   }
@@ -308,8 +337,6 @@ nav {
 }
 
 .block-section-sub {
-  height: 350px;
-
   .section-title {
     font-size: 2.5em;
   }
@@ -356,10 +383,6 @@ nav {
         vertical-align: middle;
         .sofia;
       }
-
-      .ic-sm-user-executive {
-        background-image: url('../images/ic-sm-user-executive.svg');
-      }
     }
 
     .active,
@@ -378,12 +401,17 @@ nav {
 .block-sub-menu {
   position: relative;
   top: inherit;
-
+  transition: all 0.5s;
 }
 
 .block-sub-menu-fix {
   position: fixed;
   top: 120px;
+}
+
+.block-sub-menu-fix-bottom {
+  position: absolute;
+  bottom: 40px;
 }
 
 .sub-menu {
@@ -478,6 +506,35 @@ nav {
   }
 }
 
+.team-value {
+  .wrap-value {
+    width: 100%;
+    margin-bottom: 36px;
+    padding-bottom: 24px;
+    .box-shadow;
+
+    .photo {
+      height: 80px;
+      .background-no-repeat;
+    }
+
+    .title {
+      color: @orange800;
+      font-size: 1.3em;
+      text-align: left;
+      padding: 0 24px;
+    }
+
+    .description {
+      padding: 0 24px;
+    }
+  }
+
+  .wrap-value-left {
+    margin-top: 36px;
+  }
+}
+
 .bg-product-features {
   background-image: url('../images/header-sub-product-features.svg');
 }
@@ -486,7 +543,10 @@ nav {
   background-image: url('../images/header-sub-user-stories-user-roles.svg');
 }
 
-.background-no-repeat {
-  background-repeat: no-repeat;
-  background-position: center center;
+.bg-company-about {
+  background-image: url('../images/header-sub-company-about.svg');
+}
+
+.bg-company-careers {
+  background-image: url('../images/header-sub-company-careers.svg');
 }
